--- a/P000089.opf/meta.yml
+++ b/P000089.opf/meta.yml
@@ -1,9 +1,10 @@
-ebook_metadata:
+id: P000089
+initial_creation_type: ebook
+source_metadata:
   title: ༄༅༅། །ཐེག་པ་ཆེན་པོའི་བློ་སྦྱོང་གི་མན་ངག་ཟབ་དོན་ཟབ་ལམ་ཐུགས་རྗེ་ཆེན་པོ་བདེ་གཤེགས་ཀུན་འདུས་ཀྱི་སྔོན་འགྲོ་ཐུགས་སྒྲུབ་བར་ཆད་ཀུན་སེལ་གྱི་རིམ་པ་དང་པོའི་ཁྲིད་ཀྱི་ཟིན་བྲིས་བཅས།
     །
   authors:
   - མཛད་པ་པོ། ཞེ་ཆེན་རྒྱལ་ཚབ་འགྱུར་མེད་པདྨ་རྣམ་རྒྱལ།
-  sku: SHE-SG-06
   layers:
   - book_title
   - author
@@ -12,6 +13,7 @@ ebook_metadata:
   - quotation
   - sabche
   - yigchung
+  id: SHE-SG-06
 web_metadata:
   title:
     en: Mind Training and Preliminary Practices
