layers filename capitalized

--- a/P000089.opf/layers/v001/BookTitle.yml
+++ b/P000089.opf/layers/v001/BookTitle.yml
@@ -1,5 +1,5 @@
 id: 2f3c82ed2bac44898b8ed4d63178131f
-annotation_type: book_title
+annotation_type: BookTitle
 revision: '00001'
 annotations:
 - span:
