--- a/P000089.opf/layers/v001/Chapter.yml
+++ b/P000089.opf/layers/v001/Chapter.yml
@@ -1,5 +1,5 @@
 id: e8981b7af18048878dedeeec7dd1da40
-annotation_type: chapter_title
+annotation_type: Chapter
 revision: '00001'
 annotations:
 - id: 2dcf76fafd8546cab67ba7d474685ed2
