--- a/P000089.opf/layers/v001/Quotation.yml
+++ b/P000089.opf/layers/v001/Quotation.yml
@@ -1,5 +1,5 @@
 id: fc16b3a568e64edea3cdf3475864449f
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: 3cb59cf678d748e6b4d20e7efea13279
