--- a/P000089.opf/layers/v001/Tsawa.yml
+++ b/P000089.opf/layers/v001/Tsawa.yml
@@ -1,5 +1,5 @@
 id: dab652f892b24f0fa861d59f0e3fa0ab
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: e2a888c2c8a941a692d2d8abc36fc00f
