--- a/P000089.opf/layers/v001/Sabche.yml
+++ b/P000089.opf/layers/v001/Sabche.yml
@@ -1,5 +1,5 @@
 id: 5761cfe01f4c44f4b29036e6ff567fa9
-annotation_type: Tsawa
+annotation_type: Sabche
 revision: '00001'
 annotations:
   af02047b726c4a2fa8b0095be4af2b87:
