--- a/P000089.opf/layers/v001/Yigchung.yml
+++ b/P000089.opf/layers/v001/Yigchung.yml
@@ -1,5 +1,5 @@
 id: 583ecb88b7cd486c972f76362218645b
-annotation_type: Tsawa
+annotation_type: Yigchung
 revision: '00001'
 annotations:
   85e0415e9e58421d948d30899e88b249:
